@@ -1,5 +1,17 @@
 2004-02-11  David Hyatt  <hyatt@apple.com>
 
+	Fix the .rows and .cells arrays on tables by merging with the KHTML trunk.  TH was being included
+	as a row instead of as a cell.
+	
+        Reviewed by kocienda
+
+        * khtml/html/html_miscimpl.cpp:
+        (HTMLCollectionImpl::calcLength):
+        (HTMLCollectionImpl::getItem):
+        (HTMLCollectionImpl::getNamedItem):
+
+2004-02-11  David Hyatt  <hyatt@apple.com>
+
 	Remove my bogus refs of the elementSheet.  Fixes 3554213 and 3555467.
 	
         * khtml/html/html_baseimpl.cpp:
